--- a/AllActivities/AllActivities.vcxproj
+++ b/AllActivities/AllActivities.vcxproj
@@ -128,6 +128,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="a1.cpp" />
+    <ClCompile Include="a2.cpp" />
+    <ClCompile Include="a3.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
